Add rc1 changes

--- a/meilisearch-release-changelog/v1.9.0.md
+++ b/meilisearch-release-changelog/v1.9.0.md
@@ -33,25 +33,54 @@ Meilisearch v1.9.0 improves performance when indexing and using hybrid search, a
 
 To filter returned documents by their ranking score, a new `rankingScoreThreshold` parameter has been added to the search and similar routes.
 
-When a `rankingScoreThreshold` is provided, the results of the search/similar request are modified in the following way:
+When the `rankingScoreThreshold` search parameter is provided, the results of the search/similar request are modified in the following way:
 
 1. No document whose `_rankingScore` is under the `rankingScoreThreshold` is returned
 2. Any document encountered during the search that is under the threshold is removed from the set of candidates and won’t count towards the `estimatedTotalHits`, `totalHits` and the facet distribution.
 
-### Examples
 
-request with**out** score threshold:
+```bash
+curl \
+ -X POST 'http://localhost:7700/indexes/movies/search' \
+ -H 'Content-Type: application/json' \
+ --data-binary '{
+    "q": "Badman dark returns 1",
+    "showRankingScore": true,
+    "limit": 5,
+    "rankingScoreThreshold": 0.2
+ }'
+```
+
+Results:
 
 ```json
-POST /indexes/movies/search
 {
-  "q": "Badman dark returns 1",
-  "showRankingScore": true,
-  "limit": 5
+    "hits": [
+        {
+          "title": "Batman the dark knight returns: Part 1",
+          "id": "A",
+          "_rankingScore": 0.93430081300813
+        },
+        {
+          "title": "Batman the dark knight returns: Part 2",
+          "id": "B",
+          "_rankingScore": 0.6685627880184332
+        },
+        {
+          "title": "Badman",
+          "id": "E",
+          "_rankingScore": 0.25
+        }
+    ],
+    "query": "Badman dark returns 1",
+    "processingTimeMs": 11,
+    "limit": 5,
+    "offset": 0,
+    "estimatedTotalHits": 3
 }
 ```
 
-results:
+Without `rankingScoreThreshold`, the following results would have been returned:
 
 ```json
 {
@@ -90,54 +119,9 @@ results:
 }
 ```
 
-request **with** score threshold:
+⚠️ For performance reasons, if Meilisearch finds `limit` hits above the `rankingScoreThreshold`, then the ranking score of the remaining documents is not evaluated, and so they are not removed from the set of candidates, even if their ranking score would be below the threshold. As a result, in this configuration the `estimatedTotalHits`, `totalHits` and the facet distribution may be overapproximation of their values.
 
-```json
-POST /indexes/movies/search
-{
-  "q": "Badman dark returns 1",
-  "showRankingScore": true,
-  "limit": 5
-  "rankingScoreThreshold": 0.2
-}
-```
-
-results:
-
-```json
-{
-	"hits": [
-	    {
-	      "title": "Batman the dark knight returns: Part 1",
-	      "id": "A",
-	      "_rankingScore": 0.93430081300813
-	    },
-	    {
-	      "title": "Batman the dark knight returns: Part 2",
-	      "id": "B",
-	      "_rankingScore": 0.6685627880184332
-	    },
-	    {
-	      "title": "Badman",
-	      "id": "E",
-	      "_rankingScore": 0.25
-	    }
-	],
-	"query": "Badman dark returns 1",
-	"processingTimeMs": 11,
-	"limit": 5,
-	"offset": 0,
-	"estimatedTotalHits": 3
-}
-```
-
-### Known limitations
-
-⚠️ For performance reasons, if Meilisearch finds `limit` hits above the `rankingScoreThreshold`, then the ranking score of the remaining documents is not evaluated, and so they are not removed from the set of candidates, even if their ranking score would be below the threshold.
-
-As a result, in this configuration the `estimatedTotalHits`, `totalHits` and the facet distribution may be overapproximation of their values.
-
-Done by @dureuill in TBD
+Done by @dureuill in #4666
 
 ## Get similar documents
 
@@ -205,14 +189,14 @@ Done by @irevoire and @Kerollmops in #4646, #4656 and #4631
 
 # Fixes 🐞
 
-* When no searchable attributes are declared, all the fields have the same importance instead of being randomly given more importance. More information [here](https://github.com/meilisearch/meilisearch/issues/4639) (#4631) @irevoire
+* When no specific searchable attributes are declared (`searchableAttributes: ["*"]`), all the fields have the same importance instead of being randomly given more importance. Previous behavior led to difficulties for the users to anticipate the behavior. To define which attribute is more important than another regarding the relevancy, set [the exhaustive list of `searchableAttributes`](https://www.meilisearch.com/docs/learn/configuration/displayed_searchable_attributes#the-searchableattributes-list). More information about the changes [here](https://github.com/meilisearch/meilisearch/issues/4639) (#4631) @irevoire
 * Fix `searchableAttributes` behavior with nested fields when they were not explicitly defined. More information [here](https://github.com/meilisearch/meilisearch/issues/4639) (#4631) @irevoire
 * Fix security issue in dependency: bump Rustls to non-vulnerable versions (#4622) @Kerollmops
 
 # Misc
 
 * Dependencies updates
-  * Update actix-web 4.5.1 -> 4.6.0 done by @dureuill in https://github.com/meilisearch/meilisearch/pull/4675
+  * Update actix-web 4.5.1 -> 4.6.0 (#4675) @dureuill
 * CIs and tests
   * Add "precommands" to benchmark (#4624) @dureuill
   * Allow to comment with the results of benchmark invocation (#4651) @dureuill
