Add missing AI info

--- a/meilisearch-release-changelog/v1.9.0.md
+++ b/meilisearch-release-changelog/v1.9.0.md
@@ -27,7 +27,62 @@ Done by @dureuill and @irevoire in #4633 and #4649
 
 ### Improvements
 
-Meilisearch v1.9.0 improves performance when indexing and using hybrid search, avoiding useless operations and optimizing the important ones.
+The `_vectors` field in documents plays a special role, as it is used by Meilisearch to extract the embeddings (vectors of numbers) related to the document and each embedder declared in the settings.
+
+In v1.8, the `_vectors` field must have the following shape for the embeddings to be used in embedders:
+
+```json
+{
+  "id": 42,
+  "_vectors": {
+    "default": [0.1, 0.2 ],
+      "text": [[0.1, 0.2, 0.3], [0.4, 0.5, 0.6]],
+      "image": null
+  }
+}
+```
+
+```json
+{
+  "id": 42,
+  "_vectors": {
+    "default": [0.1, 0.2 ],
+      "text": {
+        "embeddings": [[0.1, 0.2, 0.3], [0.4, 0.5, 0.6]],
+        "userProvided": true
+      },
+      "translation": {
+        "embeddings": [0.1, 0.2, 0.3, 0.4],
+        "userProvided": false
+      }
+    }
+}
+```
+
+In v1.9, this syntax is extended to allow for the value to be an object in addition to the current embeddings or array of embeddings.
+
+```json
+{
+  "id": 42,
+  "_vectors": {
+    "default": [0.1, 0.2 ],
+      "text": {
+        "embeddings": [[0.1, 0.2, 0.3], [0.4, 0.5, 0.6]],
+        "userProvided": true
+      },
+      "translation": {
+        "embeddings": [0.1, 0.2, 0.3, 0.4],
+        "userProvided": false
+      }
+    }
+}
+```
+
+This change allows **importing** embeddings to autoembedders as a one-shot process, by setting them as `userProvided: false`.
+
+The dump system makes use of this, so with this change embeddings won’t be regenerated when importing a dump created with Meilisearch v1.9.
+
+Meilisearch v1.9.0 also improves performance when indexing and using hybrid search, avoiding useless operations and optimizing the important ones.
 
 ## Filter by score
 
