--- a/meilisearch-release-changelog/v1.9.0.md
+++ b/meilisearch-release-changelog/v1.9.0.md
@@ -235,7 +235,7 @@ TBD
 
 Meilisearch now limits operations when importing settings by avoiding useless writing operations in its internal database and by reducing disk usage.
 
-Done by @irevoire and @Kerollmops in #4646, #4680 and #4631
+Done by @irevoire, @Kerollmops and @ManyTheFish in #4646, #4680 and #4631
 
 ## Other improvements
 
