Add charabia info

--- a/meilisearch-release-changelog/v1.9.0.md
+++ b/meilisearch-release-changelog/v1.9.0.md
@@ -239,6 +239,9 @@ Done by @irevoire, @Kerollmops and @ManyTheFish in #4646, #4680 and #4631
 
 ## Other improvements
 
+* Improve language support (#4684) @ManyTheFish @Soham1803 @mosuka @tkhshtsh0917
+  * Adds a new normalizer to normalize œ to oe and æ to ae
+  * Fix `chinese-normalization-pinyin` feature flag compilation
 * [Prometheus experimental feature](https://github.com/orgs/meilisearch/discussions/625): Use HTTP path pattern instead of full path in metrics (#4619) @gh2k
 * ⚠️ Remove `exportPuffinReport` experimental feature. Use [logs routes](https://github.com/orgs/meilisearch/discussions/721) and [logs modes](https://github.com/orgs/meilisearch/discussions/723) instead (#4655) @Kerollmops
 
@@ -263,4 +266,4 @@ Done by @irevoire, @Kerollmops and @ManyTheFish in #4646, #4680 and #4631
 
 ❤️ Thanks again to our external contributors:
 - [Meilisearch](https://github.com/meilisearch/meilisearch): @gh2k, @writegr, @yudrywet.
-- [Charabia](https://github.com/meilisearch/charabia): TBD
+- [Charabia](https://github.com/meilisearch/charabia): @mosuka, @Soham1803, @tkhshtsh0917.
