Apply suggestions from code review
Co-authored-by: gui machiavelli <hey@guimachiavelli.com>

--- a/meilisearch-release-changelog/v1.9.0.md
+++ b/meilisearch-release-changelog/v1.9.0.md
@@ -15,8 +15,7 @@ Some SDKs might not include all new features. Consult the project repository for
 
 ## Hybrid search improvements
 
-Since we're focusing on AI innovation, this version introduces multiple improvements and changes related to hybrid search.
-More detailed changelog [here](https://meilisearch.notion.site/v1-9-AI-search-changes-e90d6803eca8417aa70a1ac5d0225697#38e6d3adf40e4ef1be14a3c4be39df94).
+This release introduces multiple [hybrid search updates](https://meilisearch.notion.site/v1-9-AI-search-changes-e90d6803eca8417aa70a1ac5d0225697#38e6d3adf40e4ef1be14a3c4be39df94).
 
 Done by @dureuill and @irevoire in #4633 and #4649
 
@@ -84,7 +83,7 @@ The dump system makes use of this, so with this change embeddings won’t be reg
 
 Meilisearch v1.9.0 also improves performance when indexing and using hybrid search, avoiding useless operations and optimizing the important ones.
 
-## Filter by score
+## New feature: Ranking score threshold
 
 To filter returned documents by their ranking score, a new `rankingScoreThreshold` parameter has been added to the search and similar routes.
 
@@ -233,22 +232,22 @@ TBD
 
 ## Improve indexing speed when updating/adding settings
 
-Meilisearch now limits operations when importing settings by avoiding useless writing operations in its internal database and by reducing disk usage.
+Meilisearch now limits operations when importing settings by avoiding unnecessary writing operations in its internal database and reducing disk usage.
 
 Done by @irevoire, @Kerollmops and @ManyTheFish in #4646, #4680 and #4631
 
 ## Other improvements
 
 * Improve language support (#4684) @ManyTheFish @Soham1803 @mosuka @tkhshtsh0917
-  * Adds a new normalizer to normalize œ to oe and æ to ae
+  * Add new normalizer to normalize œ to oe and æ to ae
   * Fix `chinese-normalization-pinyin` feature flag compilation
 * [Prometheus experimental feature](https://github.com/orgs/meilisearch/discussions/625): Use HTTP path pattern instead of full path in metrics (#4619) @gh2k
 * ⚠️ Remove `exportPuffinReport` experimental feature. Use [logs routes](https://github.com/orgs/meilisearch/discussions/721) and [logs modes](https://github.com/orgs/meilisearch/discussions/723) instead (#4655) @Kerollmops
 
 # Fixes 🐞
 
-* When no specific searchable attributes are declared (`searchableAttributes: ["*"]`), all the fields have the same importance instead of being randomly given more importance. Previous behavior led to difficulties for the users to anticipate the behavior. To define which attribute is more important than another regarding the relevancy, set [the exhaustive list of `searchableAttributes`](https://www.meilisearch.com/docs/learn/configuration/displayed_searchable_attributes#the-searchableattributes-list). More information about the changes [here](https://github.com/meilisearch/meilisearch/issues/4639) (#4631) @irevoire
-* Fix `searchableAttributes` behavior with nested fields when they were not explicitly defined. More information [here](https://github.com/meilisearch/meilisearch/issues/4639) (#4631) @irevoire
+* All fields now have the same impact on relevancy when `searchableAttributes: ["*"]`. Consult the [GitHub issue for a detailed breakdown of these changes](https://github.com/meilisearch/meilisearch/issues/4639) (#4631) @irevoire
+* Fix `searchableAttributes` behavior when handling nested fields. Consult the [GitHub issue for more information](https://github.com/meilisearch/meilisearch/issues/4639) (#4631) @irevoire
 * Fix security issue in dependency: bump Rustls to non-vulnerable versions (#4622) @Kerollmops
 
 # Misc
@@ -261,8 +260,8 @@ Done by @irevoire, @Kerollmops and @ManyTheFish in #4646, #4680 and #4631
 * Documentation
   * Update README.md (#4664) @tpayet
 * Misc
-  * Fix some typos in comments (#4568) @yudrywet
-  * Fix some typos in comments (#4582) @writegr
+  * Fix comment typos (#4568) @yudrywet
+  * Fix comment typos (#4582) @writegr
 
 ❤️ Thanks again to our external contributors:
 - [Meilisearch](https://github.com/meilisearch/meilisearch): @gh2k, @writegr, @yudrywet.
