--- a/meilisearch-release-changelog/v1.9.0.md
+++ b/meilisearch-release-changelog/v1.9.0.md
@@ -129,21 +129,19 @@ curl \
 
 Done by @dureuill in #4647
 
-## `frequency` matching strategy when searching
+## New feature: `frequency` matching strategy
 
-A `frequency` variant to the `matchingStrategy` search parameter has been added. This favors the least frequent query words when retrieving the documents.
+This release adds a new matching strategy, `frequency`. Use it to prioritize results containing the least frequent query terms:
 
 ```bash
 curl \
- -X POST 'http://localhost:7700/indexes/movies/search' \
+ -X POST 'http://localhost:7700/indexes/{index_uid}/search' \
  -H 'Content-Type: application/json' \
  --data-binary '{
     "q": "chaval blanc",
     "matchingStrategy": "frequency"
  }'
 ```
-
-Previous existing values for `matchingStrategy` are `last` and `all` (`last` is the default value).
 
 Done by @ManyTheFish in #4667
 
