--- a/meilisearch-release-changelog/v1.9.0.md
+++ b/meilisearch-release-changelog/v1.9.0.md
@@ -138,7 +138,7 @@ curl \
  -X POST 'http://localhost:7700/indexes/{index_uid}/search' \
  -H 'Content-Type: application/json' \
  --data-binary '{
-    "q": "chaval blanc",
+    "q": "cheval blanc",
     "matchingStrategy": "frequency"
  }'
 ```
