Apply suggestions from code review
Co-authored-by: Louis Dureuil <louis@meilisearch.com>

--- a/meilisearch-release-changelog/v1.9.0.md
+++ b/meilisearch-release-changelog/v1.9.0.md
@@ -27,7 +27,7 @@ Before v1.9, Meilisearch interpreted these as a single embedding of dimension 0.
 
 ### ⚠️ Breaking change: `_vectors` field no longer present in search results
 
-Meilisearch no longer includes `_vectors` in returned search results by default. This will considerably improve performance.
+When the experimental `vectorStore` feature is enabled, Meilisearch no longer includes `_vectors` in returned search results by default. This will considerably improve performance.
 
 Use the new `retrieveVectors` search parameter to display the `_vectors` field:
 
@@ -52,23 +52,22 @@ The document `_vector` field now accepts objects in addition to embedding arrays
     "default": [0.1, 0.2 ],
       "text": {
         "embeddings": [[0.1, 0.2, 0.3], [0.4, 0.5, 0.6]],
-        "userProvided": true
+        "regenerate": false
       },
       "translation": {
         "embeddings": [0.1, 0.2, 0.3, 0.4],
-        "userProvided": false
+        "regenerate": true
       }
     }
 }
-```
 
 The `_vector` object must contain two fields: `embeddings` and `userProvided`.
 
-`embeddings` must be the document's embeddings.
+If present, `embeddings` will replace this document's embeddings.
 
-`userProvided` must be either `true` or `false`. If `userProvided: true`, Meilisearch uses the configured values and does not overwrite them when re-indexing items with an autoembedder. If `userProvided: false`, Meilisearch will use the configured document embedding, but will overwrite it when re-indexing items with an autoembedder.
+`regenerate` must be either `true` or `false`. If `regenerate: true`, Meilisearch will overwrite the document embeddings each time the document is updated in the future. If `regenerate: false`, Meilisearch will keep the last provided or generated embeddings even if the document is updated in the future.
 
-This change allows importing embeddings to autoembedders as a one-shot process, by setting them as `userProvided: false`. This change also ensures embeddings are not regenerated when importing a dump created with Meilisearch v1.9.
+This change allows importing embeddings to autoembedders as a one-shot process, by setting them as `regenerate: true`. This change also ensures embeddings are not regenerated when importing a dump created with Meilisearch v1.9.
 
 Meilisearch v1.9.0 also improves performance when indexing and using hybrid search, avoiding useless operations and optimizing the important ones.
 
