--- a/meilisearch-release-changelog/v1.9.0.md
+++ b/meilisearch-release-changelog/v1.9.0.md
@@ -153,6 +153,8 @@ TBD
 
 Meilisearch now limits operations when importing settings by avoiding unnecessary writing operations in its internal database and reducing disk usage.
 
+Additionally, when changing embedding settings, Meilisearch will now only regenerate the embeddings for the embedders whose settings have been modified, instead of for all embedders. When only the `documentTemplate` is modified, embeddings will only be regenerated for documents where this modification leads to a different text to embed.
+
 Done by @irevoire, @Kerollmops and @ManyTheFish in #4646, #4680 and #4631
 
 ## Other improvements
