--- a/meilisearch-release-changelog/v1.9.0.md
+++ b/meilisearch-release-changelog/v1.9.0.md
@@ -62,7 +62,7 @@ The document `_vector` field now accepts objects in addition to embedding arrays
 }
 ```
 
-The `_vector` object must contain two fields: `embeddings` and `userProvided`.
+The `_vectors` object may contain two fields: `embeddings` and `regenerate`.
 
 If present, `embeddings` will replace this document's embeddings.
 
@@ -121,7 +121,7 @@ curl \
 - `limit`: number of results to display, optional, defaults to `20`
 - `filter`: string with a filter expression Meilisearch should apply to the results, optional, defaults to `null`
 - `embedder`: string indicating the embedder Meilisearch should use to retrieve similar documents, optional, defaults to `"default"`
-- `attributesToRetrieve`: array of strings indicating which fields Meilisearch will include in the response, optional, defaults to `[]`
+- `attributesToRetrieve`: array of strings indicating which fields Meilisearch will include in the response, optional, defaults to `["*"]`
 -  `showRankingScore`: boolean indicating if results should include ranking score information, optional, defaults to `false`
 - `showRankingScoreDetails`: boolean indicating if results should include detailed ranking score information, optional, defaults to `false`
 
@@ -145,9 +145,23 @@ curl \
 
 Done by @ManyTheFish in #4667
 
-## Set `distinctAttribute` at search
+## Set `distinctAttribute` at search time
 
-TBD
+This release introduces a new search parameter: `distinct` which you can use to specify the distinct attribute at search time:
+
+```bash
+curl \
+ -X POST 'http://localhost:7700/indexes/{index_uid}/search' \
+ -H 'Content-Type: application/json' \
+ --data-binary '{
+    "q": "kefir le double poney",
+    "distinct": "book.isbn"
+ }'
+```
+
+If a distinct attribute is already defined in the settings it'll be ignored in favor of the one defined at search time.
+
+Done by @Kerollmops in #4693
 
 ## Improve indexing speed when updating/adding settings
 
@@ -155,7 +169,7 @@ Meilisearch now limits operations when importing settings by avoiding unnecessar
 
 Additionally, when changing embedding settings, Meilisearch will now only regenerate the embeddings for the embedders whose settings have been modified, instead of for all embedders. When only the `documentTemplate` is modified, embeddings will only be regenerated for documents where this modification leads to a different text to embed.
 
-Done by @irevoire, @Kerollmops and @ManyTheFish in #4646, #4680 and #4631
+Done by @irevoire, @Kerollmops, @ManyTheFish and @dureuill in #4646, #4680, #4631 and #4649
 
 ## Other improvements
 
@@ -170,6 +184,7 @@ Done by @irevoire, @Kerollmops and @ManyTheFish in #4646, #4680 and #4631
 * All fields now have the same impact on relevancy when `searchableAttributes: ["*"]`. Consult the [GitHub issue for a detailed breakdown of these changes](https://github.com/meilisearch/meilisearch/issues/4639) (#4631) @irevoire
 * Fix `searchableAttributes` behavior when handling nested fields. Consult the [GitHub issue for more information](https://github.com/meilisearch/meilisearch/issues/4639) (#4631) @irevoire
 * Fix security issue in dependency: bump Rustls to non-vulnerable versions (#4622) @Kerollmops
+* Reset other embedding settings when changing the `source` of an embedder. This prevents [misleading error messages when configuring the embedders](https://github.com/meilisearch/meilisearch/issues/4690) (#4649) @dureuill 
 
 # Misc
 
