Update following rc3

--- a/meilisearch-release-changelog/v1.9.0.md
+++ b/meilisearch-release-changelog/v1.9.0.md
@@ -41,6 +41,12 @@ curl \
   }'
 ```
 
+### ⚠️ Breaking change: `_vectors.embedder` arrays can be altered by Meilisearch
+
+In order to save storage and run faster, Meilisearch is no longer storing your vector "as-is". Meilisearch now returns the float in a canonicalized representation rather than the user-provided representation.
+
+For example, `3` may be represented as `3.0`
+
 ### Document `_vector` accepts object values
 
 The document `_vector` field now accepts objects in addition to embedding arrays:
@@ -173,6 +179,7 @@ Done by @irevoire, @Kerollmops, @ManyTheFish and @dureuill in #4646, #4680, #463
 
 ## Other improvements
 
+* Speed up filter ANDs operations (#4682) @Kerollmops
 * Improve language support (#4684) @ManyTheFish @Soham1803 @mosuka @tkhshtsh0917
   * Add new normalizer to normalize œ to oe and æ to ae
   * Fix `chinese-normalization-pinyin` feature flag compilation
@@ -184,7 +191,7 @@ Done by @irevoire, @Kerollmops, @ManyTheFish and @dureuill in #4646, #4680, #463
 * All fields now have the same impact on relevancy when `searchableAttributes: ["*"]`. Consult the [GitHub issue for a detailed breakdown of these changes](https://github.com/meilisearch/meilisearch/issues/4639) (#4631) @irevoire
 * Fix `searchableAttributes` behavior when handling nested fields. Consult the [GitHub issue for more information](https://github.com/meilisearch/meilisearch/issues/4639) (#4631) @irevoire
 * Fix security issue in dependency: bump Rustls to non-vulnerable versions (#4622) @Kerollmops
-* Reset other embedding settings when changing the `source` of an embedder. This prevents [misleading error messages when configuring the embedders](https://github.com/meilisearch/meilisearch/issues/4690) (#4649) @dureuill 
+* Reset other embedding settings when changing the `source` of an embedder. This prevents [misleading error messages when configuring the embedders](https://github.com/meilisearch/meilisearch/issues/4690) (#4649) @dureuill
 
 # Misc
 
@@ -193,6 +200,7 @@ Done by @irevoire, @Kerollmops, @ManyTheFish and @dureuill in #4646, #4680, #463
 * CIs and tests
   * Add "precommands" to benchmark (#4624) @dureuill
   * Allow to comment with the results of benchmark invocation (#4651) @dureuill
+  * Fix ci tests (#4685) @ManyTheFish
 * Documentation
   * Update README.md (#4664) @tpayet
 * Misc
