Update following rc4

--- a/meilisearch-release-changelog/v1.9.0.md
+++ b/meilisearch-release-changelog/v1.9.0.md
@@ -179,8 +179,8 @@ Done by @irevoire, @Kerollmops, @ManyTheFish and @dureuill in #4646, #4680, #463
 
 ## Other improvements
 
-* Speed up filter ANDs operations (#4682) @Kerollmops
-* Speed up facet distribution (#4713) @Kerollmops 
+* Speed up filter ANDs operations during the search (#4682) @Kerollmops
+* Speed up facet distribution during the search (#4713) @Kerollmops
 * Improve language support (#4684) @ManyTheFish @Soham1803 @mosuka @tkhshtsh0917
   * Add new normalizer to normalize œ to oe and æ to ae
   * Fix `chinese-normalization-pinyin` feature flag compilation
@@ -193,13 +193,13 @@ Done by @irevoire, @Kerollmops, @ManyTheFish and @dureuill in #4646, #4680, #463
 * Fix `searchableAttributes` behavior when handling nested fields. Consult the [GitHub issue for more information](https://github.com/meilisearch/meilisearch/issues/4639) (#4631) @irevoire
 * Fix security issue in dependency: bump Rustls to non-vulnerable versions (#4622) @Kerollmops
 * Reset other embedding settings when changing the `source` of an embedder. This prevents [misleading error messages when configuring the embedders](https://github.com/meilisearch/meilisearch/issues/4690) (#4649) @dureuill
-* Fix panic in hybrid search when removing all embedders from the DB (https://github.com/meilisearch/meilisearch/pull/4715) @irevoire 
+* Fix panic in hybrid search when removing all embedders from the DB (#4715) @irevoire
 
 # Misc
 
 * Dependencies updates
   * Update actix-web 4.5.1 -> 4.6.0 (#4675) @dureuill
-  * Update mini-dashboard to 2.13 -> 2.14 (#4712) @curquiza 
+  * Update mini-dashboard to 2.13 -> 2.14 (#4712) @curquiza
 * CIs and tests
   * Add "precommands" to benchmark (#4624) @dureuill
   * Allow to comment with the results of benchmark invocation (#4651) @dureuill
