Apply suggestions from code review
Co-authored-by: Strift <lau.cazanove@gmail.com>

--- a/meilisearch-release-changelog/v1.9.0.md
+++ b/meilisearch-release-changelog/v1.9.0.md
@@ -47,9 +47,9 @@ In order to save storage and run faster, Meilisearch is no longer storing your v
 
 For example, `3` may be represented as `3.0`
 
-### Document `_vector` accepts object values
+### Document `_vectors` accepts object values
 
-The document `_vector` field now accepts objects in addition to embedding arrays:
+The document `_vectors` field now accepts objects in addition to embedding arrays:
 
 ```json
 {
