--- a/meilisearch-release-changelog/v1.9.0.md
+++ b/meilisearch-release-changelog/v1.9.0.md
@@ -194,6 +194,7 @@ Done by @irevoire, @Kerollmops, @ManyTheFish and @dureuill in #4646, #4680, #463
 * Fix security issue in dependency: bump Rustls to non-vulnerable versions (#4622) @Kerollmops
 * Reset other embedding settings when changing the `source` of an embedder. This prevents [misleading error messages when configuring the embedders](https://github.com/meilisearch/meilisearch/issues/4690) (#4649) @dureuill
 * Fix panic in hybrid search when removing all embedders from the DB (#4715) @irevoire
+* Hybrid search now respects the `offset` and `limit` parameters when returning keyword results early (#4746) @dureuill
 
 # Misc
 
