--- a/meilisearch-release-changelog/v1.9.0.md
+++ b/meilisearch-release-changelog/v1.9.0.md
@@ -130,6 +130,7 @@ curl \
 - `attributesToRetrieve`: array of strings indicating which fields Meilisearch will include in the response, optional, defaults to `["*"]`
 -  `showRankingScore`: boolean indicating if results should include ranking score information, optional, defaults to `false`
 - `showRankingScoreDetails`: boolean indicating if results should include detailed ranking score information, optional, defaults to `false`
+- `rankingScoreThreshold`: Excludes search results with a ranking score lower than the defined number, optional, defaults to `null`.
 
 `/indexes/{indexUid}/similar` supports `GET` and `POST` routes. Use URL query parameters to configure your `GET` request, or include your parameters in the request body if using the `POST` route.  Both offer identical functionality.
 
