--- a/meilisearch-release-changelog/v1.9.0.md
+++ b/meilisearch-release-changelog/v1.9.0.md
@@ -41,7 +41,7 @@ curl \
   }'
 ```
 
-### ⚠️ Breaking change: `_vectors.embedder` arrays can be altered by Meilisearch
+### ⚠️ Breaking change: Meilisearch no longer preserves the exact representation of embeddings appearing in `_vectors`
 
 In order to save storage and run faster, Meilisearch is no longer storing your vector "as-is". Meilisearch now returns the float in a canonicalized representation rather than the user-provided representation.
 
