--- a/meilisearch-release-changelog/v1.10.0.md
+++ b/meilisearch-release-changelog/v1.10.0.md
@@ -40,28 +40,28 @@ curl \
 ```
 Response:
 
-```json
+```json5
 {
-  hits: [
- {
+  "hits": [
+    {
       "id": 42,
       "title": "Batman returns",
       "overview": "..",
       "_federation": {
         "indexUid": "movies",
         "queriesPosition": 0
- }
- },
- {
+      }
+    },
+    {
       "comicsId": "batman-killing-joke",
       "description": "..",
       "title": "Batman: the killing joke",
       "_federation": {
         "indexUid": "comics",
         "queriesPosition": 1
- }
- },
-    ..
+      }
+    },
+    ...
  ],
   processingTimeMs: 0,
   limit: 20,
@@ -83,21 +83,21 @@ curl \
  --data-binary '{
   "federation": {},
   "queries": [
- {
+    {
       "q": "apple red",
       "indexUid": "fruits",
       "filter": "BOOSTED = true",
       "_showRankingScore": true,
       "federationOptions": {
         "weight": 3.0
- }
- },
- {
+      }
+    },
+    {
       "q": "apple red",
       "indexUid": "fruits",
       "_showRankingScore": true,
- }
- ]
+    }
+  ]
 }'
 ```
 
@@ -246,7 +246,7 @@ Replaced by
 
 Before:
 
-```json
+```json5
 // v1.9 (old) version
 {
   "source": "rest",
@@ -260,7 +260,7 @@ Before:
 }
 ```
 
-```json
+```json5
 // v1.10 (new) version
 {
   "source": "rest",
