--- a/meilisearch-release-changelog/v1.10.0.md
+++ b/meilisearch-release-changelog/v1.10.0.md
@@ -233,7 +233,7 @@ Done by @Kerollmops in #4626.
 
 For the purpose of future stabilization of the feature, we are applying changes and quality-of-life improvements.
 
-Done by @dureuill in #4801, #4815 and #4818.
+Done by @dureuill in #4801, #4815, #4818, #4822.
 
 ### ⚠️ Breaking changes - changing the parameters of the REST API
 
@@ -302,6 +302,7 @@ If `headers` contains `Authorization` and `Content-Type`, the declared values wi
 * When a request to a REST embedder fails, the duration of the exponential backoff is now randomized up to twice its base duration
 * Truncate rather than embed by chunk when OpenAI embeddings are bigger than the max number of tokens
 * Improve error message when indexing documents and embeddings are missing for a user-provided embedder
+* Improve error message when a model configuration cannot be loaded and its "architectures" field does not contain "BertModel"
 
 ## ⚠️ Important change regarding the minimal Ubuntu version compatible with Meilisearch
 
