Apply suggestions from code review
Co-authored-by: Louis Dureuil <louis@meilisearch.com>

--- a/meilisearch-release-changelog/v1.10.0.md
+++ b/meilisearch-release-changelog/v1.10.0.md
@@ -274,6 +274,22 @@ Before:
  }
 }
 ```
+> [!CAUTION]
+> This is a breaking change to the configuration of REST embedders.
+> Importing a dump containing a REST embedder configuration will fail in v1.10 with an error: "Error: unknown field `query`, expected one of `source`, `model`, `revision`, `apiKey`, `dimensions`, `documentTemplate`, `url`, `request`, `response`, `distribution` at line 1 column 752".
+
+Upgrade procedure (Cloud):
+
+1. Remove any embedder with source "rest"
+2. Click the button to upgrade your Meilisearch version
+4. Re-add any removed embedder, using the new settings.
+
+Upgrade procedure (OSS users):
+
+1. Remove any embedder with source "rest"
+2. Create a dump
+3. Import that dump in a v1.10
+4. Re-add any removed embedder, using the new settings.
 
 ### Add custom headers to REST embedders
 
