Add upgrade procedure for AI breaking change

--- a/meilisearch-release-changelog/v1.10.0.md
+++ b/meilisearch-release-changelog/v1.10.0.md
@@ -281,15 +281,12 @@ Before:
 Upgrade procedure (Cloud):
 
 1. Remove any embedder with source "rest"
-2. Click the button to upgrade your Meilisearch version
-4. Re-add any removed embedder, using the new settings.
+2. Follow the usual steps described [here in the documentatino](https://www.meilisearch.com/docs/learn/update_and_migration/updating#updating-meilisearch-cloud)
 
-Upgrade procedure (OSS users):
+Upgrade procedure (Open-source users):
 
 1. Remove any embedder with source "rest"
-2. Create a dump
-3. Import that dump in a v1.10
-4. Re-add any removed embedder, using the new settings.
+2. Follow the usual steps described [here in the documentatino](https://www.meilisearch.com/docs/learn/update_and_migration/updating#updating-a-self-hosted-meilisearch-instance)
 
 ### Add custom headers to REST embedders
 
