Add missing charabia PRs

--- a/meilisearch-release-changelog/v1.10.0.md
+++ b/meilisearch-release-changelog/v1.10.0.md
@@ -330,6 +330,8 @@ Done by @curquiza in #4783.
 * Search speed optimization: implement intersection at the end of the search pipeline by @Kerollmops in #4717
 * Indexing speed optimization: stop opening indexes to only check if they exist by @Karribalu in #4787
 * Improve tenant token error messages by @irevoire in #4724
+* Add null byte as hard context separator by @LukasKalbertodt in meilisearch/charabia#295
+* Adds all [math symbols](https://www.compart.com/en/unicode/category/Sm) to the default separator list by @phillitrOSU in meilisearch/charabia#301
 
 # Fixes 🐞
 
@@ -366,5 +368,5 @@ Done by @curquiza in #4783.
   * Allow `MEILI_NO_VERGEN` env var to skip vergen by @dureuill in #4812
 
 ❤️ Thanks again to our external contributors:
-- [Meilisearch](https://github.com/meilisearch/meilisearch): @Karribalu, @hanbings, @junhochoi, @JWSong, @PeterDaveHello,
-- [Charabia](https://github.com/meilisearch/charabia): @LukasKalbertodt
+- [Meilisearch](https://github.com/meilisearch/meilisearch): @Karribalu, @hanbings, @junhochoi, @JWSong, @PeterDaveHello.
+- [Charabia](https://github.com/meilisearch/charabia): @LukasKalbertodt, @phillitrOSU.
