--- a/meilisearch-release-changelog/v1.10.0.md
+++ b/meilisearch-release-changelog/v1.10.0.md
@@ -287,7 +287,7 @@ Upgrade procedure (Cloud):
 Upgrade procedure (Open-source users):
 
 1. Remove any embedder with source "rest"
-2. Follow the usual steps described [here in the documentatino](https://www.meilisearch.com/docs/learn/update_and_migration/updating#updating-a-self-hosted-meilisearch-instance)
+2. Follow the usual steps described [here in the documentation](https://www.meilisearch.com/docs/learn/update_and_migration/updating#updating-a-self-hosted-meilisearch-instance)
 
 ### Add custom headers to REST embedders
 
