--- a/meilisearch-release-changelog/v1.10.0.md
+++ b/meilisearch-release-changelog/v1.10.0.md
@@ -282,7 +282,7 @@ Before:
 Upgrade procedure (Cloud):
 
 1. Remove any embedder with source "rest"
-2. Follow the usual steps described [here in the documentatino](https://www.meilisearch.com/docs/learn/update_and_migration/updating#updating-meilisearch-cloud)
+2. Follow the usual steps described [here in the documentation](https://www.meilisearch.com/docs/learn/update_and_migration/updating#updating-meilisearch-cloud)
 
 Upgrade procedure (Open-source users):
 
