--- a/meilisearch-release-changelog/v1.10.0.md
+++ b/meilisearch-release-changelog/v1.10.0.md
@@ -333,6 +333,7 @@ Done by @curquiza in #4783.
 * Improve tenant token error messages by @irevoire in #4724
 * Add null byte as hard context separator by @LukasKalbertodt in meilisearch/charabia#295
 * Adds all [math symbols](https://www.compart.com/en/unicode/category/Sm) to the default separator list by @phillitrOSU in meilisearch/charabia#301
+* Errors emitted at the main level of the Meilisearch binary are now logged with level `ERROR` by @dureuill in #4835
 
 # Fixes 🐞
 
