--- a/meilisearch-release-changelog/v1.10.0.md
+++ b/meilisearch-release-changelog/v1.10.0.md
@@ -16,7 +16,7 @@ Some SDKs might not include all new features. Consult the project repository for
 
 ## Federated search
 
-By using the `POST /multi-search` endpoint, you can now return a **single** search result object, whose list of `hits` is built by merging the hits coming from all the queries in descending ranking score order.
+Use the new `federation` setting of the `/multi-search` route to return a single search result object:
 
 ```bash
 curl \
