Apply suggestions from code review
Co-authored-by: gui machiavelli <hey@guimachiavelli.com>

--- a/meilisearch-release-changelog/v1.10.0.md
+++ b/meilisearch-release-changelog/v1.10.0.md
@@ -39,6 +39,7 @@ curl \
  ]
 }'
 ```
+
 Response:
 
 ```json5
@@ -62,7 +63,7 @@ Response:
         "queriesPosition": 1
       }
     },
-    ...
+    …
  ],
   processingTimeMs: 0,
   limit: 20,
@@ -72,10 +73,16 @@ Response:
 }
 ```
 
-If `federation` is empty (`{}`) default values of `offset` and `limit` are used, so respectively 0 and 20.
-If `federation` is null or missing, a classic multi-search will be applied, so a list of search result objects for each index will be returned.
 
-To customize the relevancy and the weight applied to each index in the search result, use the `federationOptions` parameter in your request:
+When performing a federated search, Meilisearch merges the results coming from different sources in descending ranking score order.
+
+If `federation` is empty (`{}`), Meilisearch  sets `offset` and `limit` to 0 and 20 respectively. 
+
+If `federation` is `null` or missing, multi-search returns one list of search result objects for each index.
+
+### Federated results relevancy
+
+When performing federated searches, use `federationOptions` in the request's `queries` array to configure the relevancy and the weight of each index:
 
 ```bash
 curl \
@@ -102,25 +109,22 @@ curl \
 }'
 ```
 
-`weight` must be positive (>=0)
-- if < 1.0, the hits from this query are less likely to appear in the results.
-- if > 1.0, the hits from this query are more likely to appear in the results.
-- if missing, the default value is applied (1.0)
+`federationOptions` must be an object. It supports a single field, `weight`, which must be a positive floating-point number:
+- if `weight` < `1.0`, results from this index are __less__ likely to appear in the results
+- if `weight` > `1.0`, results from this index are __more__ likely to appear in the results
+- if not specified, `weight` defaults to `1.0`
 
 <!-- The following lines should NOT be put in the PRE-release changelogs -->
-📖 More information about the merge algorithm on the [documentation](TBD).
+📖 Consult the [official Meilisearch documentation](TBD) for more information about the merge algorithm.
 
 <!-- The following line should ONLY be put PRE-release changelogs -->
-📖 More information about the merge algorithm on the [here](https://meilisearch.notion.site/v1-10-federated-search-698dfe36ab6b4668b044f735fb40f0b2).
+📖 Consult the [in-progress usage page](https://meilisearch.notion.site/v1-10-federated-search-698dfe36ab6b4668b044f735fb40f0b2) for more information about the merge algorithm.
 
 Done by @dureuill in #4769.
 
 ## Experimental: `CONTAINS` filter operator
 
-Enabling the experimental feature will make a new `CONTAINS` operator available while filtering on strings.
-This is similar to the SQL `LIKE` operator used with `%`.
-
-Activate the experimental feature:
+Enable the `containsFilter` experimental feature to use the `CONTAINS` filter operator:
 
 ```bash
 curl \
@@ -130,7 +134,8 @@ curl \
     "containsFilter": true
  }'
 ```
-Use the newly introduced `CONTAINS` operator:
+
+`CONTAINS` filters results containing partial matches to the specified string, similar to a SQL `LIKE`:
 
 ```bash
 curl \
@@ -138,7 +143,7 @@ curl \
   -H 'Content-Type: application/json' \
  --data-binary '{
       "q": "super hero",
-      "filter": "synopsis NOT CONTAINS spider"
+      "filter": "synopsis CONTAINS spider"
  }'
 ```
 
@@ -146,7 +151,7 @@ curl \
 
 Done by @irevoire in #4804.
 
-## Languages settings
+## Language settings
 
 You can now set up the language of your index in your settings and during the search. This will prevent users from using alternative Meilisearch images we were separately created until now (like for [Swedish](https://github.com/meilisearch/meilisearch/pull/4604) and [Japanese](https://github.com/meilisearch/meilisearch/pull/3882))
 
@@ -198,11 +203,11 @@ curl \
 
 The `locales` parameter overrides eventual `locales` in the index settings.
 
-## Experimental: edit documents by using a function
+## Experimental: Edit documents with a Rhai function
 
-You can edit documents by executing a [Rhai function](https://rhai.rs/) on all the documents of your database or a subset of them that you can select by a Meilisearch filter.
+Use a [Rhai function](https://rhai.rs/) to edit documents in your database directly from Meilisearch:
 
-Activate the experimental feature:
+First, activate the experimental feature:
 
 ```bash
 curl \
@@ -219,8 +224,8 @@ By indexing this [movies dataset](https://www.meilisearch.com/movies.json), you 
 curl http://localhost:7700/indexes/movies/documents/edit \
  -H 'content-type: application/json' \
   -d '{
- "filter": "id > 3000",
- "function": "doc.title = `✨ ${doc.title.to_upper()} ✨`"
+   "function": "doc.title = `✨ ${doc.title.to_upper()} ✨`",
+   "filter": "id > 3000"
  }'
 ```
 
